# TradeLine247

./: .cursorrules  .env  .env.example  .env.production  .gitattributes  .gitignore  .keep.current.sha  .lighthousebudgets.json  .lighthouserc.cjs  .lintstagedrc.cjs  .lovable-instructions.md  .oct31-ui-baselines.csv  .vercelignore  ARCHITECTURE.md  AUDIT_REPORT.md  CARECONNECT_PR_BODY.md  CARECONNECT_QUALITY_RUBRIC.md  CARECONNECT_README.md  CHANGELOG.md  CHATBOX_ICON_IMPLEMENTATION.md  CI_BUILD_FIX_COMPLETE.md  CI_FIXES_SUMMARY.md  CI_FIX_COMMIT_MESSAGE.txt  CI_PERMANENT_FIX_COMMIT.txt  CI_TEST_FIXES_SUMMARY.md  CLEANUP_COMPLETE_SUMMARY.md  CLEANUP_PROGRESS.md  CODEMAGIC_IOS_RUBRIC_FINAL.md  CODEMAGIC_WINDOWS_RUBRIC.md  COMMIT_STEPS.md  COMPLIANCE.md  COMPONENT_AUDIT_REPORT.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_CODE_AUDIT.md  COMPREHENSIVE_FIXES_2025.md  CREATE_PR_INSTRUCTIONS.md  CRITICAL_SECURITY_FIXES_APPLIED.md  CRITICAL_SECURITY_FIXES_P0.md  Compliance-Proof.md  Cookie-Matrix.md  (+153 more)
.claude-devops-skill/: INDEX.md  INSTALLATION.md  README.md  USAGE_GUIDE.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  CODEX_EXECUTOR_SPEC.md  PRODUCTION_SECRETS_HYGIENE.md  SECURITY_TESTING.md  pull_request_template.md
.husky/: pre-commit
.lighthouseci/: assertion-results.json  links.json  (+2 more)
services/doctor-finder-svc/: Dockerfile  main.py  pyproject.toml  sources-allowlist.yaml
services/libs/common/: pyproject.toml
services/libs/common/careconnect_common/: __init__.py  auth.py  consent.py  idempotency.py  logging.py
services/libs/common/tests/: test_idempotency.py
(+1137 files in other folders)
